# WhatSon

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Changelog.md  Chnagelog.md  INIT.md  README.md
cmake/root/distribution/: CMakeLists.txt
cmake/root/runtime/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/app/agenda/: ContentsAgendaBackend.cpp  ContentsAgendaBackend.hpp
src/app/calendar/: CalendarBoardStore.cpp  CalendarBoardStore.hpp  SystemCalendarStore.cpp  SystemCalendarStore.hpp
src/app/callout/: ContentsCalloutBackend.cpp  ContentsCalloutBackend.hpp
src/app/cmake/defaults/: CMakeLists.txt
src/app/cmake/resources/: CMakeLists.txt
src/app/cmake/runtime/: CMakeLists.txt
src/app/editor/bridge/: ContentsEditorSelectionBridge.cpp  ContentsEditorSelectionBridge.hpp
src/app/editor/parser/: ContentsWsnBodyBlockParser.cpp  (+1 more)
src/app/file/: WhatSonDebugTrace.hpp
src/app/hub/: WhatSonHubCreator.cpp  WhatSonHubCreator.hpp  WhatSonWorkspaceHubCreator.cpp
src/app/note/: WhatSonNoteBodyCreator.hpp  WhatSonNoteCreator.hpp  WhatSonNoteHeaderCreator.hpp
src/app/permissions/: ApplePermissionBridge.hpp  ApplePermissionBridge.mm  ApplePermissionBridge_stub.cpp  CMakeLists.txt  WhatSonPermissionBootstrapper.cpp  WhatSonPermissionBootstrapper.hpp
src/app/platform/: CMakeLists.txt
src/app/policy/: ArchitecturePolicyLock.cpp  ArchitecturePolicyLock.hpp
src/app/qml/: CMakeLists.txt  DesignTokens.qml  Main.qml  MainWindowInteractionController.qml  Onboarding.qml
src/app/register/: WhatSonRegisterManager.cpp  WhatSonRegisterManager.hpp
src/app/sidebar/: HierarchyItemListModel.hpp  SidebarHierarchyStore.hpp
src/app/sync/: WhatSonHubSyncController.cpp  WhatSonHubSyncController.hpp
src/app/viewmodel/: CMakeLists.txt
src/daemon/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  README.md
test/cpp/: CMakeLists.txt  whatson_cpp_regression_test_support.cpp  whatson_cpp_regression_tests.cpp  whatson_cpp_regression_tests.hpp  whatson_cpp_regression_tests_main.cpp
test/cpp/suites/: a4_paper_background_tests.cpp  active_editor_surface_adapter_tests.cpp  agenda_component_tests.cpp  app_launch_support_tests.cpp  architecture_policy_lock_tests.cpp  break_component_tests.cpp  callout_component_tests.cpp  clipboard_import_file_name_policy_tests.cpp  contents_display_context_menu_coordinator_tests.cpp  contents_display_minimap_coordinator_tests.cpp  contents_display_selection_state_tests.cpp  contents_display_view_tests.cpp  contents_editor_selection_bridge_tests.cpp  cron_expression_async_scheduler_tests.cpp  debug_trace_filter_tests.cpp  dependency_wiring_tests.cpp  detail_panel_routing_tests.cpp  display_note_body_mount_coordinator_tests.cpp  display_paper_models_tests.cpp  display_surface_policy_tests.cpp  editor_direct_save_tests.cpp  editor_display_viewport_coordinator_tests.cpp  editor_font_family_provider_tests.cpp  editor_get_property_tests.cpp  editor_gutter_minimap_layout_metrics_tests.cpp  editor_line_number_rail_metrics_tests.cpp  editor_minimap_layout_metrics_tests.cpp  editor_persistence_controller_tests.cpp  editor_raw_pull_controller_tests.cpp  editor_raw_push_controller_tests.cpp  editor_session_controller_tests.cpp  editor_set_property_tests.cpp  editor_set_tag_tests.cpp  editor_surface_mode_support_tests.cpp  editor_tag_insertion_writer_tests.cpp  editor_tags_boundary_tests.cpp  editor_view_mode_controller_tests.cpp  editor_view_mode_view_model_tests.cpp  editor_visual_line_metrics_tests.cpp  folders_hierarchy_parser_tests.cpp  (+73 more)
tests/: CMakeLists.txt
tests/app/: test_agenda_viewmodel.cpp  test_architecture_policy_lock.cpp  test_async_scheduler.cpp  test_backend_bridge.cpp  test_calendar_board_store.cpp  test_contents_editor_bridge.cpp  test_contents_text_format_renderer.cpp  test_day_calendar_viewmodel.cpp  test_detail_panel_viewmodel.cpp  test_editor_view_mode_viewmodel.cpp  test_file_validators.cpp  test_focused_note_deletion_bridge.cpp  test_hierarchy_drag_drop_bridge.cpp  test_hierarchy_viewmodels.cpp  test_hub_sync_controller.cpp  test_library_hierarchy_view_model.cpp  test_month_calendar_viewmodel.cpp  test_navigation_mode_viewmodel.cpp  test_navigation_qml_frames.cpp  test_note_list_model_contract_bridge.cpp  test_onboarding_hub_controller.cpp  test_onboarding_route_bootstrap_controller.cpp  test_panel_viewmodel_registry.cpp  test_permission_bridge_source_guard.cpp  test_qml_binding_syntax_guard.cpp  test_resource_bitmap_viewer.cpp  test_resources_import_viewmodel.cpp  test_runtime_bootstrap_wiring.cpp  test_selected_hub_store.cpp  test_sidebar_hierarchy_module.cpp  test_sidebar_hierarchy_store.cpp  test_sidebar_selection_store.cpp  test_solid_architecture_contracts.cpp  test_system_calendar_store.cpp  test_tags_hierarchy_view_model.cpp  test_todo_list_viewmodel.cpp  test_trial_policy.cpp  test_week_calendar_viewmodel.cpp  test_whatson_hierarchy_io.cpp  test_whatson_hub_note_deletion_service.cpp  (+13 more)
tests/python/: test_build_parallelism.py  test_cli_onboarding.py  test_cmake_desktop_install.py  test_cmake_platform_icons.py  test_contents_editor_snapshot_refresh.py  test_detail_panel_current_note_wiring.py  test_detail_panel_metadata_lists.py  test_detail_panel_note_switch_refresh.py  test_detail_panel_selection_noop.py  test_editor_drawer_panel_partition.py  test_editor_focus.py  test_editor_format_shortcuts.py  test_editor_gutter_logical_metrics.py  test_editor_page_print_margins.py  test_editor_theme.py  test_hub_sync_controller.py  test_hub_write_lease.py  test_library_hierarchy_counts_sync.py  test_lvrs_api_purity.py  test_main_shortcuts.py  test_mobile_editor_native_selection.py  test_mobile_shell_layout.py  test_multi_selection_modifiers.py  test_navigation_panel_toggles.py  test_note_list_item_image_layout.py  test_note_list_viewport_preservation.py  test_projects_detail_no_project_refresh.py  test_resources_hierarchy_selection_fallback.py  test_sidebar_hierarchy_reload_guard.py  test_startup_lazy_loading.py  test_trial_window.py  test_wsnote_package_contract.py  test_wsnote_validator_normalization.py
(+2739 files in other folders)
